--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             <nav class="project-nav">
               <ul>
                 <li class="btn all-btn selected" data-filter="all">All</li>
-                <li class="btn web-btn" data-filter="website">Websites</li>
-                <li class="btn ui-design-btn" data-filter="ui-design">UI Design</li>
+                <li class="btn code-btn" data-filter="code">Code</li>
+                <li class="btn design-btn" data-filter="design">Design</li>
                 <li class="btn videos-btn" data-filter="video">Videos</li>
               </ul>
             </nav>
@@ -92,7 +92,7 @@
         </div>
       </main>
       <footer>
-        <!-- <p class="copyright-txt"></p> -->
+        <p class="copyright-txt"></p>
       </footer>
     </div>
 
