--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <li class="btn all-btn selected" data-filter="all">All</li>
                 <li class="btn code-btn" data-filter="code">Code</li>
                 <li class="btn design-btn" data-filter="design">Design</li>
-                <li class="btn videos-btn" data-filter="video">Videos</li>
+                <li class="btn videos-btn" data-filter="videos">Videos</li>
               </ul>
             </nav>
             <div class="projects-container d-grid">
